# swing-by

./: .gitignore  00_START_HERE.md  COMPLETE.txt  Cargo.toml  DEBUGGING_EXECUTION_GUIDE.md  DEBUG_GUIDE.md  DEPLOY_GUIDE.md  DEVELOPMENT.md  ENVIRONMENT_VALIDATION_REPORT.md  EXECUTION_READY.txt  FINAL_EXECUTION_REPORT.md  FINAL_SUMMARY.md  GIT_COMMIT_INSTRUCTIONS.txt  MANUAL_GIT_COMMANDS.md  OLLAMA_SETUP.md  PROJECT_COMPLETION_REPORT.md  PROJECT_READY_FOR_DEPLOYMENT.txt  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_KO.md  RUN_NOW.txt  SETUP_CHECKLIST.md  STARTUP_GUIDE.txt  START_HERE_NOW.txt  VERIFICATION_REPORT.md  deploy.bat  deploy.sh  docker-compose.yml  env.sh  fibonacci.py """  git_commit.bat  github_workflows_ci.yml  init_git.bat  init_git.sh  install.ps1  install.sh  install_mac.sh  main.rs  quick-start.bat  (+8 more)
.github/workflows/: release.yml
editor/: .gitignore  CHANGELOG.md  DESIGN_GUIDE.md  DEVELOPMENT_GUIDE.md  PRD.md  README.md  ROADMAP.md  TODO.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
editor/landing/: index.html
editor/supabase/: schema.sql
editor/tests/: e2e.js
src/: config.rs  history.rs  main.rs  monitor.rs  ui.rs  utils.rs
src/agent/: chat.rs  github.rs  mod.rs  node.rs  ollama.rs  orchestrator.rs  rag.rs  react.rs  sub_agent.rs  tools.rs
src/agile/: board.rs  coordinator.rs  hacker.rs  mod.rs  pipeline.rs  postmortem.rs  retrospective.rs  runner.rs  security.rs  story.rs  team.rs  techdebt.rs
src/discord/: bot.rs  mod.rs  session.rs
src/ipc/: mod.rs  protocol.rs  (+1 more)
(+103 files in other folders)
