[package]
name = "ai_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
shlex = "1.1"
tempfile = "3.8"
glob = "0.3"
regex = "1"
walkdir = "2"
futures-util = "0.3"
# Discord bot
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache", "rustls_backend"], default-features = false }
# Agent 간 채널 통신
async-channel = "2"
# UUID (세션 ID)
uuid = { version = "1", features = ["v4"] }

toml = "0.8"
colored = "2"

[dev-dependencies]
